# python-design-pattern

./: pyproject.toml
AbstractFactory/: abstract_factory.py  concrete_factory.py
Adapter/: adapter.py
Builder/: builder.py
FactoryMethod/: factory_method.py
Prototype/: prototype.py
Singleton/: singleton.py  singleton_2.py
