[tool.poetry]
name = "python-design-pattern"
version = "0.1.0"
description = ""
authors = ["KuragariKurage <22191637+KuragariKurage@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_design_pattern"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
autoflake = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
